@@ -2,6 +2,7 @@ Revision history for CGI-Info
 
 0.96
 	Allow the logger to be a reference to an array
+	Added the auto_load parameter to disable AUTOLOAD
 
 0.95	Sun Mar  2 19:52:56 EST 2025
 	Use Params::Get
